force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <description>Serve para registar as grandes categorias dos orçamentos anuais.</description>
    <label>Orçamento</label>
    <nameField>
        <label>Orçamento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orçamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>