force-app/main/default/objects/Budget__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>Budgeted amount.</inlineHelpText>
    <label>Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>