force-app/main/default/objects/Budget__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Serve para agrupar várias rúbricas do orçamento na mesma categoria.</inlineHelpText>
    <label>Categoria</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Custos Fixos</fullName>
            </value>
            <value>
                <fullName>Custos RH</fullName>
            </value>
            <value>
                <fullName>Deslocações</fullName>
            </value>
            <value>
                <fullName>IRC</fullName>
            </value>
            <value>
                <fullName>IVA</fullName>
            </value>
            <value>
                <fullName>Juros</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Outros Custos</fullName>
            </value>
            <value>
                <fullName>Subscontração Serviços</fullName>
            </value>
            <value>
                <fullName>Subsídios exploração</fullName>
            </value>
            <value>
                <fullName>Vendas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>