force-app/main/default/objects/Budget__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <inlineHelpText>Defines the budget category level</inlineHelpText>
    <label>Category Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>