force-app/main/default/objects/Budget__c/fields/Main_Budget__c.field-meta.xml
<CustomField>
    <fullName>Main_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Budget higher on hierarchie.</inlineHelpText>
    <label>Main Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Child Budgets</relationshipLabel>
    <relationshipName>Budget</relationshipName>
    <type>Lookup</type>
</CustomField>