force-app/main/default/objects/Budget__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Despesa</fullName>
            </value>
            <value>
                <fullName>Receita</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>