force-app/main/default/objects/Budget__c/listViews/X2018.listView-meta.xml
<ListView>
    <fullName>X2018</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <label>2018</label>
</ListView>